<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="ru.tensor.sabycomdemo.settings.SettingsViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/user_data_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{e -> viewModel.setName(e.toString())}"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/hint_name"
                android:inputType="textPersonName"
                android:text="@{viewModel.name}"/>

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{e -> viewModel.setSurname(e.toString())}"
                android:autofillHints="name"
                android:hint="@string/hint_surname"
                android:inputType="textPersonName"
                android:text="@{viewModel.surname}"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{e -> viewModel.setPhone(e.toString())}"
                android:autofillHints="phone"
                android:ems="10"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:text="@{viewModel.phone}"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{e -> viewModel.setEmail(e.toString())}"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:text="@{viewModel.email}"/>

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::startWithData}"
                android:text="@string/start_button"/>

            <Button
                android:id="@+id/anonymous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::startAnonymous}"
                android:text="@string/start_anonymous_button"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_data_container">

            <EditText
                android:id="@+id/app_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:afterTextChanged="@{e -> viewModel.setAppId(e.toString())}"
                android:autofillHints="none"
                android:hint="@string/hint_app_id"
                android:inputType="text"
                android:text="@{viewModel.appId}"/>

            <Spinner
                android:id="@+id/host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:entries="@array/hosts"
                android:onItemSelected="@{(parent,view,pos,id) -> viewModel.setHost(pos)}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/buttons_container"/>

            <Button
                android:id="@+id/restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{viewModel::restart}"
                android:text="@string/restart_app"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>